# cmake_study

./: CMakeLists.txt
src/: Student.cpp  mainapp.cpp
